# pulsar-client-python

./: .asf.yaml  .gitignore  .gitmodules  CMakeLists.txt  README.md  RELEASE.md  build-client-cpp.sh  build-mac-wheels.sh  dependencies.yaml  mantest.py  pulsar-client-cpp-version.txt  setup.py  vcpkg-3.10.json  vcpkg-3.7.json  vcpkg-3.8.json  vcpkg-3.9.json  vcpkg.json  version.txt
.github/workflows/: ci-build-release-wheels.yaml  ci-pr-validation.yaml  codeql.yml
build-support/: copy-deps-versionfile.sh  dep-url.sh  dep-version.py  install-cpp-client.sh  install-dependencies.sh  pulsar-test-service-start.sh  stage-release.sh  start-test-service-inside-container.sh  upload-pypi.sh
develop/: install_manifest.txt
examples/: async.py  mcp_server.py
pkg/: build-wheel-inside-docker.sh  test-wheel.sh
pkg/mac/: build-dependencies.sh  build-mac-wheels.sh  build-pulsar-cpp.sh  common.sh  python-3.7.patch
pkg/manylinux/: Dockerfile
pkg/manylinux2014/: Dockerfile  pulsar-client-cpp-3.7.0.patch
pkg/manylinux_musl/: Dockerfile
pulsar/: __about__.py  __init__.py  asyncio.py  tableview.py
pulsar/functions/: context.py
pulsar/schema/: definition.py  schema.py  schema_avro.py
src/: authentication.cc  client.cc  config.cc  consumer.cc  enums.cc  exceptions.cc  exceptions.h  message.cc  producer.cc  pulsar.cc  reader.cc  schema.cc  table_view.cc  utils.cc  utils.h
tests/: .gitignore  asyncio_test.py  auto_cluster_failover_test.py  custom_logger_test.py  debug_logger_test.py  interrupted_test.py  oauth2_test.py  pulsar_test.py  reader_test.py  run-unit-tests.sh  schema_test.py  table_view_test.py
tests/test-conf/: standalone-ssl.conf  standalone.conf
